--- a/ProgAdvII.MB08_01.Linq.Samples/LinqExamples/Linq/Linq.csproj
+++ b/ProgAdvII.MB08_01.Linq.Samples/LinqExamples/Linq/Linq.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Linq</RootNamespace>
     <AssemblyName>Linq</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -60,6 +61,7 @@
     <Compile Include="Ueberblick\Ueberblick.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="QueryExpressions\Ueberblick.cd" />
   </ItemGroup>
   <ItemGroup>
