PGA2 MB16:Serialization 2

--- a/ProgAdvII.MB15_01.Serialization.Template/ZBW.ProgAdvII.Serialization.BusinessLogic/ZBW.ProgAdvII.Serialization.BusinessLogic.csproj
+++ b/ProgAdvII.MB15_01.Serialization.Template/ZBW.ProgAdvII.Serialization.BusinessLogic/ZBW.ProgAdvII.Serialization.BusinessLogic.csproj
@@ -5,6 +5,10 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="PeterO.Cbor" Version="4.5.5" />
+    </ItemGroup>
+
+    <ItemGroup>
       <None Update="Exercises\2\garageJson.json">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
